# UR3e_Vision_pick_and_place

./: CMakeLists.txt  aruco.cpp  face.cpp  main.cpp
data/cascades/: haarcascade_smile.xml
